Optimize code comments